Button's text UI fixed

--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -1193,6 +1193,7 @@
     <text name="TrialBalance">Trial Balance</text>   
     <text name="DefaultMonth">Default Month</text>  
     <text name="Create plan">Create Plan</text>
+    <text name="Compare">Compare</text>
 
 
 
