--- a/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
+++ b/aspnet-core/src/Zinlo.Core/Localization/Zinlo/Zinlo.xml
@@ -893,7 +893,7 @@
     <text name="ReadState">Read state</text>
     <text name="You">You</text>
     <text name="Anonymous">Anonymous</text>
-    <text name="GoToHomePage">Got to home page.</text>
+    <text name="GoToHomePage">Got to home page</text>
     <text name="ActivationMessage">Your Tenant has been created. Please wait for the admin activation.</text>
     <text name="Messages">Messages</text>
     <text name="ThisNotificationDoesntBelongToYou">This notification doesn't belong to you.</text>
